# Velos-AI

./: .dockerignore  .env.example  .gitignore  BLOCKCHAIN_INTEGRATION_GUIDE.md  DEPLOYMENT.md  DEPLOY_RENDER.md  DETAILED_FRONTEND_ILLUSTRATION.md  Dockerfile  Dockerfile.frontend  FEATURE_DEMO_SCRIPT.md  FRONTEND_UI_GUIDE.md  IMPLEMENTATION_REPORT.md  Makefile  PHASE2_IMPROVEMENTS.md  PRESENTATION_NOTES.md  PRODUCTION_HARDENING_REPORT.md  QA_ANALYSIS_REPORT.md  QA_QUICK_START.md  README.md  SPEC.md  STATE.md  ZYND_PROTOCOL_INTEGRATION.md  app_backup.py  docker-compose.yml  index.html  nohup.out  quick_start.py  render.yaml  requirements.txt  run-backend.sh  run-frontend.sh  server.py  setup.sh  test_api_realtime.py
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py  script.py.mako
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  advanced_agents.py  core_agents.py  orchestrator.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  billing.py  dashboard.py  health.py  (+1 more)
backend/app/core/: exceptions.py  middleware.py  permissions.py  security.py
backend/app/models/: __init__.py  database.py  enums.py
backend/app/repositories/: base.py  tenant_repo.py
backend/app/services/: llm_client.py  notification_service.py  pii_redactor.py  storage_service.py
backend/app/utils/: cache.py  logger.py
backend/app/workers/: background.py
backend/tests/: conftest.py  test_fast.py
backend/tests/integration/: test_api_endpoints.py  test_zynd.py
backend/tests/unit/: test_orchestrator.py
(+79 files in other folders)
